--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "errorhandler": "1.5.x",
     "express": "4.15.x",
     "jquery": "^3.3.1",
+    "jquery.mmenu": "^7.0.1",
     "method-override": "2.3.x",
     "morgan": "1.8.x",
-    "popper": "^1.0.1"
+    "popper": "^1.0.1",
+    "popper.js": "^1.12.9"
   },
   "repository": {},
   "engines": {
