--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browserify": "^15.2.0",
     "cloudant": "1.7.x",
     "connect-multiparty": "2.0.x",
+    "dotenv": "^5.0.0",
     "ejs": "2.5.x",
     "errorhandler": "1.5.x",
     "express": "4.15.x",
@@ -18,8 +19,10 @@
     "jquery.mmenu": "^7.0.1",
     "method-override": "2.3.x",
     "morgan": "1.8.x",
+    "nano": "^6.4.2",
     "popper": "^1.0.1",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "superlogin": "^0.6.1"
   },
   "repository": {},
   "engines": {
