--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ejs": "2.5.x",
     "errorhandler": "1.5.x",
     "express": "4.15.x",
+    "express-authorization": "^1.0.0",
+    "express-session": "^1.15.6",
     "jquery": "^3.3.1",
     "jquery.mmenu": "^7.0.1",
     "method-override": "2.3.x",
