--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "browserify": "^15.2.0",
     "cloudant": "1.7.x",
     "connect-multiparty": "2.0.x",
+    "create-element": "^0.2.3",
     "dotenv": "^5.0.0",
     "ejs": "2.5.x",
     "errorhandler": "1.5.x",
     "express": "4.15.x",
     "express-authorization": "^1.0.0",
     "express-session": "^1.15.6",
+    "jade": "^1.11.0",
     "jquery": "^3.3.1",
     "jquery.mmenu": "^7.0.1",
     "method-override": "2.3.x",
