--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cloudant": "1.7.x",
     "connect-multiparty": "2.0.x",
     "create-element": "^0.2.3",
+    "domjson": "^0.1.2",
     "dotenv": "^5.0.0",
     "ejs": "2.5.x",
     "errorhandler": "1.5.x",
