--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jade": "^1.11.0",
     "jquery": "^3.3.1",
     "jquery.mmenu": "^7.0.1",
+    "memorystore": "^1.6.0",
     "method-override": "2.3.x",
     "morgan": "1.8.x",
     "nano": "^6.4.2",
